(4.2.5p221) 2009/09/26 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1316] segfault if refclock_nmea can't open file.
* [Bug 1317] Distribute cvo.sh.
(4.2.5p220) 2009/09/25 Released by Harlan Stenn <stenn@ntp.org>
* Rearrange libisc code to match the upstream layout in BIND.  This is
  step one of two, changing the layout but keeping our existing libisc.
(4.2.5p219) 2009/09/24 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1315] "interface ignore 0.0.0.0" is ignored.
* add implicit "nic ignore all" rule before any rules from ntp.conf, so
  "nic listen eth0" alone means the same as "-I eth0".
* add wildcard match class for interface/nic rules.
* fix mistaken carryover of prefixlen from one rule to the next.
* Ensure IPv6 localhost address ::1 is included in libisc's Windows IPv6
  address enumeration, allowing ntpq and ntpdc's hardcoding to 127.0.0.1 
  on Windows to end.
(4.2.5p218) 2009/09/21 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1314] saveconfig emits -4 and -6 on when not given.
* correct parsing and processing of setvar directive.
* highlight location of ntpq :config syntax errors with ^.
* clarify (former) NO_ARG, SINGLE_ARG, MULTIPLE_ARG renaming to
  FOLLBY_TOKEN, FOLLBY_STRING, FOLLBY_STRINGS_TO_EOC.
* parser, saveconfig cleanup to store T_ identifiers in syntax tree.
(4.2.5p217) 2009/09/20 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1300] reject remote configuration of dangerous items.
(4.2.5p216) 2009/09/19 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1312] ntpq/ntpdc MD5 passwords truncated to 8 chars on Suns.
* CID 10 missing free(up); in refclock_palisade.c error return, again.
* CID 83 added assertion to demonstrate config_nic_rules() does not
  call strchr(NULL, '/').
(4.2.5p215) 2009/09/18 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1292] Workaround last VC6 unsigned __int64 kink.
(4.2.5p214) 2009/09/17 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1303] remove top-level "autokey" directive.