@@ -4754,8 +4754,6 @@ AC_CONFIG_FILES(clockstuff/Makefile)
 AC_CONFIG_FILES(include/Makefile)
 AC_CONFIG_FILES(kernel/Makefile)
 AC_CONFIG_FILES(kernel/sys/Makefile)
-AC_CONFIG_FILES(lib/isc/include/isc/Makefile)
-AC_CONFIG_FILES(lib/isc/unix/include/isc/Makefile)
 AC_CONFIG_FILES(libntp/Makefile)
 AC_CONFIG_FILES(libparse/Makefile)
 AC_CONFIG_FILES(ntpd/Makefile)
