@@ -1,39 +1,0 @@
-NULL=
-#AUTOMAKE_OPTIONS = ../util/ansi2knr no-dependencies
-AUTOMAKE_OPTIONS = 
-ETAGS_ARGS = $(srcdir)/Makefile.am
-#EXTRA_DIST = TAGS
-
-noinst_HEADERS = \
-	app.h \
-	assertions.h \
-	boolean.h \
-	buffer.h \
-	error.h \
-	file.h \
-	formatcheck.h \
-	interfaceiter.h \
-	ipv6.h \
-	lang.h \
-	lib.h \
-	list.h \
-	log.h \
-	magic.h \
-	md5.h \
-	mem.h \
-	msgcat.h \
-	msgs.h \
-	mutex.h \
-	netaddr.h \
-	netscope.h \
-	once.h \
-	platform.h \
-	print.h \
-	result.h \
-	region.h \
-	sockaddr.h \
-	stdio.h \
-	string.h \
-	types.h \
-	util.h \
-	$(NULL)
