@@ -1,15 +1,0 @@
-NULL=
-#AUTOMAKE_OPTIONS = ../util/ansi2knr no-dependencies
-AUTOMAKE_OPTIONS = 
-ETAGS_ARGS = $(srcdir)/Makefile.am
-#EXTRA_DIST = TAGS
-
-noinst_HEADERS = \
-	dir.h \
-	int.h \
-	net.h \
-	offset.h \
-	stat.h \
-	strerror.h \
-	time.h \
-	$(NULL)
